--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import assets/sass/_setup
+@import assets/sass/_curso
+    
+body
+    background-color: red
